installs/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cs-a4g
  namespace: proxy
spec:
  externalName: cs-a4g-code-server.cs-a4g.svc.cluster.local
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
  name: cs-a4g-ingress
  namespace: proxy
spec:
  ingressClassName: public
  rules:
  - host: cs-a4g.dodev.research-mbzuai.ac
    http:
      paths:
      - backend:
          service:
            name: cs-a4g
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - '*.dodev.research-mbzuai.ac'
    secretName: ro-tls
